--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -26,4 +26,4 @@ jobs:
         run: pip install -r requirements.txt
 
       - name: Линтер
-        run: flake8 stocks_product --exclude migrations --ignore E501,F401,E302,W293,W391,W292
+        run: flake8 stocks_products --exclude migrations --ignore E501,F401,E302,W293,W391,W292
